--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -109,3 +109,72 @@ code {
 .icons {
   margin-right: 10px;
 }
+
+/* MOVIE PAGE */
+
+.movie-overview {
+  position: relative;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  padding: 50px 0 100px;
+  z-index: 1;
+  color: #fff;
+}
+
+.movie-overview img {
+  width: 300px;
+  height: 450px;
+}
+
+.movie-overview:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-color: rgba(8,28,36,.8);
+}
+
+/*  actors */
+.movie-actors {
+  position: relative;
+}
+
+.movie-actors__item {
+  margin: 15px 0;
+}
+
+.movie-actors__name {
+  color: #fff;
+  left: 15px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  background: rgba(8,28,36,.3);
+  width: calc(100% - 30px);
+  padding: 5px 10px;
+  height: 110px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align
+  : center;
+}
+
+.movie-actors__item img {
+  width: 100%;
+  min-height: 311.25px;
+}
+
+
+.active-link {
+  color: black;
+}
+
+.active-link:hover {
+  color: black;
+}
