--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -1,180 +1,186 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 li {
-  list-style-type: none
+    list-style-type: none
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
 .form-control {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .btn-group {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 .invalid-feedback {
-  display: block!important;
+    display: block !important;
 }
 
 /* card */
 
 .card {
-  box-shadow: 5px 5px 10px hsla(0,0%,47.8%,.5);
+    box-shadow: 5px 5px 10px hsla(0, 0%, 47.8%, .5);
 }
 
 .card-movie {
-  display: flex;
-  padding: 0!important;
+    display: flex;
+    padding: 0 !important;
 }
 
 .card-img--height {
-  height: 278px;
-  width: 185px !important;
-  object-fit: cover;
+    height: 278px;
+    width: 185px !important;
+    object-fit: cover;
 }
 
 .card-movie__description {
-  width: 100%;
-  padding: 10px 15px;
-  position: relative;
+    width: 100%;
+    padding: 10px 15px;
+    position: relative;
 }
 
 .card-movie__icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card-movie__name {
-  display: block;
-  color: #000;
-  text-decoration: none;
-  padding: 20px 0;
-  font-size: 16px;
-  font-weight: 600;
+    display: block;
+    color: #000;
+    text-decoration: none;
+    padding: 20px 0;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .card-movie__details, .card-movie__details a {
-  text-decoration: none;
-  color: #000;
+    text-decoration: none;
+    color: #000;
 }
 
 .card-movie__details {
-  position: absolute;
-  width: 100%;
-  border-top: 1px solid rgba(0,0,0,.1);
-  bottom: 0;
-  left: 0;
-  padding: 15px 30px;
+    position: absolute;
+    width: 100%;
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    bottom: 0;
+    left: 0;
+    padding: 15px 30px;
 }
 
 /*ПАГИНАЦИЯ */
 
 .btn-pagination {
-  display: flex!important;
-  margin: 10px 0;
+    display: flex !important;
+    margin: 10px 0;
 }
 
 .page-pagination {
-  text-align: center;
-  font-size: 16px;
+    text-align: center;
+    font-size: 16px;
 }
 
 .clear-btn {
-  background-color: rgba(8,28,36,.9)!important;
-  color: #fff!important;
-  margin: 10px 0;
-  width: 100%;
-  font-weight: 600!important;
+    background-color: rgba(8, 28, 36, .9) !important;
+    color: #fff !important;
+    margin: 10px 0;
+    width: 100%;
+    font-weight: 600 !important;
 }
 
 .clear-btn:hover {
-  color: deepskyblue!important;
+    color: deepskyblue !important;
 }
 
 /* icons */
 
 .icons {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 
 /* MOVIE PAGE */
 
 .movie-overview {
-  position: relative;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  padding: 50px 0 100px;
-  z-index: 1;
-  color: #fff;
+    position: relative;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    padding: 50px 0 100px;
+    z-index: 1;
+    color: #fff;
 }
 
 .movie-overview img {
-  width: 300px;
-  height: 450px;
+    width: 300px;
+    height: 450px;
 }
 
 .movie-overview:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-color: rgba(8,28,36,.8);
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: rgba(8, 28, 36, .8);
 }
 
 /*  actors */
 .movie-actors {
-  position: relative;
+    position: relative;
 }
 
 .movie-actors__item {
-  margin: 15px 0;
+    margin: 15px 0;
 }
 
 .movie-actors__name {
-  color: #fff;
-  left: 15px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  background: rgba(8,28,36,.3);
-  width: calc(100% - 30px);
-  padding: 5px 10px;
-  height: 110px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align
-  : center;
+    color: #fff;
+    left: 15px;
+    position: absolute;
+    bottom: 0;
+    background: rgba(8, 28, 36, .3);
+    width: calc(100% - 30px);
+    padding: 5px 10px;
+    height: 110px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .movie-actors__item img {
-  width: 100%;
-  min-height: 311.25px;
+    width: 100%;
+    min-height: 311.25px;
 }
 
 
 .active-link {
-  color: black;
+    color: black;
 }
 
 .active-link:hover {
-  color: black;
+    color: black;
+}
+
+.icons-button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
 }
